<resources>
    <string name="app_name">Threestops Partner</string>
    <string name="app_name_withoutSpace">Threestops_Partner</string>
    <string name="facebook_app_id">1111066805703978</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading&#8230;</string>
    <string name="logging_out">Logging out&#8230;</string>
    <string name="network_problem">Could not connect to the server.</string>
    <string name="uhOh">Uh&#45;Oh&#33;</string>
    <string name="reGrantPermissionMsg">You have denied the required permission(s). Please, grant to proceed further."</string>
    <string name="appSetting">App Setting</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="logoutDialog">Do you want to logout?</string>
    <string name="log">Log</string>
    <string name="out">Out</string>
    <string name="sessionExpired">Sorry your session expired please login again!!!</string>
    <string name="login">LOG IN</string>
    <string name="signin">SIGN IN</string>
    <string name="signup">SIGN UP</string>
    <string name="app_name_splash">Truckr</string>
    <string name="splash_msg">Your same-day delivery solution</string>
    <string name="welcome">Welcome to Truckr</string>
    <string name="phone_no">PHONE NUMBER</string>
    <string name="phone_no_email_hint">EMAIL/PHONE NUMBER</string>
    <string name="password">PASSWORD</string>
    <string name="forgot_pass">FORGOT PASSWORD?</string>
    <string name="select_country">SELECT COUNTRY</string>
    <string name="fill_fields">Fill the fields</string>
    <string name="phone_miss">Enter the email or phone number</string>
    <string name="phone_mis">Please enter a phone number.</string>
    <string name="password_miss">Please enter a password.</string>
    <string name="login_succes">Login Success</string>
    <string name="login_signup_txt"><![CDATA[<font color=\'#767676\'>"Don\'t have an account?"</font><font color=\'#5AA43E\'>" Sign Up"</font>]]></string>
    <string name="selectLanguage">Language</string>
    <string name="english">English</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="forgotMsgMob">Enter your phone number and you will get a \n verification code to reset password </string>
    <string name="forgotMsgEmail">Enter your email address to receive a \n link to reset password </string>
    <string name="verify_mob">Verify Mobile Number</string>
    <string name="verify_msg1">A Verification Code has been sent to</string>
    <string name="verify_msg2">Please enter the code below.</string>
    <string name="resend">RESEND CODE ?</string>
    <string name="verify">VERIFY</string>
    <string name="enter_otp">Enter a verication code</string>
    <string name="newpassmsg">Thank you for verifying your phone number \n  please create a new password below.</string>
    <string name="NewPass">NEW PASSWORD</string>
    <string name="ReEnterPass">"RE-ENTER PASSWORD</string>
    <string name="passNotMactch">Mismatched password. </string>
    <string name="Continue">CONTINUE</string>
    <string name="entNewPass">Enter new password</string>
    <string name="EntNewPass">Change Password</string>
    <string name="reentrPass">Re-enter the password</string>
    <string name="logout_vl">Logout</string>
    <string name="selectVeh_vl">Select Vehicle</string>
    <string name="plateno_vl">Plate Number</string>
    <string name="type_vl">Type</string>
    <string name="model_vl">Model</string>
    <string name="confirm">CONFIRM</string>
    <string name="logoutmessage">Are you sure you want to log out?</string>
    <string name="selectVechicle">Select vehicle</string>
    <string name="signup_">Sign Up</string>
    <string name="next">NEXT</string>
    <string name="persoanl">PERSONAL DETAILS</string>
    <string name="fname">FIRST NAME*</string>
    <string name="lname">LAST NAME</string>
    <string name="phone_num">PHONE NUMBER*</string>
    <string name="email">EMAIL*</string>
    <string name="password_signup">PASSWORD* </string>
    <string name="driving_lic">DRIVING LICENCE *</string>
    <string name="upload">"(upload both sides)*</string>
    <string name="err_fname">Please enter your first name.</string>
    <string name="err_phone_no">Please enter Phone Number</string>
    <string name="err_email">Please enter an email address.</string>
    <string name="err_pass">Please enter Password</string>
    <string name="invalidEmail">Invalid email address, please try again.</string>
    <string name="invalid_email_or_phone">Invalid Email or Phone Number</string>
    <string name="invalidPhone">Invalid phone number, please try again.</string>
    <string name="operator">Operator</string>
    <string name="free_lancer">Freelancer</string>
    <string name="choose_prof_pic">Please upload your Profile Image</string>
    <string name="choose_licence_img">Please upload your driving license</string>
    <string name="phone_reg_err">Phone  is already registered.</string>
    <string name="phone_email_reg_err">Phone and Email is already registered.</string>
    <string name="email_reg_err">Email  is already registered.</string>
    <string name="licence_miss">Upload the Licence image.</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="plate_no">Plate Number*</string>
    <string name="color">Color*</string>
    <string name="type">Type*</string>
    <string name="specialities">Speciality*</string>
    <string name="make">Make*</string>
    <string name="model">Model*</string>
    <string name="insurance">INSURANCE (upload both sides)*</string>
    <string name="finish">FINISH</string>
    <string name="err_plate">Enter plate number</string>
    <string name="err_color">Enter color</string>
    <string name="err_type">Select Type</string>
    <string name="err_specialities">Select Speciality</string>
    <string name="err_make">Select Make</string>
    <string name="err_model">Select Model</string>
    <string name="err_veh_img">Select vehicle image</string>
    <string name="err_insurance_img">Add insurance image</string>
    <string name="signup_success_msg">Thanks for signing up. one of our representative will get in touch with you in the next 24 hours to setup your profile and get all the necessary documents</string>
    <string name="Insurance_miss">Upload the Insurance image.</string>
    <string name="certificate_miss">Upload the Certificate image.</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>
    <string name="payments">Wallet</string>
    <string name="wallet">My Wallet</string>
    <string name="view_profile">View Profile</string>
    <string name="go_offline">Go Offline</string>
    <string name="go_online">Go Online</string>
    <string name="current">CURRENT</string>
    <string name="upcoming">UPCOMING</string>
    <string name="id">ID :</string>
    <string name="time_left">Time left for pickup</string>
    <string name="from">From</string>
    <string name="to">TO</string>
    <string name="no_of_trips">No of Trips</string>
    <string name="amount_earns">Amount Earned</string>
    <string name="onthepickup">On the way to pickup</string>
    <string name="googlemaps">Google Maps</string>
    <string name="googlemaps_color"><![CDATA[<font color=\'#4885ED\'>G</font><font color=\'#DB3236\'>o</font><font color=\'#F4C20D\'>o</font><font color=\'#4885ED\'>g</font><font color=\'#3CBA54\'>l</font><font color=\'#DB3236\'>e</font><font color=\'#767676\'>" Maps"</font>]]></string>
    <string name="maps">" Maps"</string>
    <string name="waze">Waze</string>
    <string name="distance">Distance</string>
    <string name="timer">Time</string>
    <string name="km">Km</string>
    <string name="min">Min</string>
    <string name="arrivedToPick">ARRIVED</string>
    <string name="arrivedAtPick">Arrived at pickup</string>
    <string name="start">START</string>
    <string name="waitingTime">Waiting Time</string>
    <string name="hrs">Hrs</string>
    <string name="onTrip">On Trip</string>
    <string name="unload">UNLOAD</string>
    <string name="delivery_completed">Delivery Completed</string>
    <string name="cancelReason">Cancel Reason</string>
    <string name="comments">COMMENTS</string>
    <string name="tv_comment_hint">Write comment here...</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="prof_fname">First Name</string>
    <string name="prof_lname">Last Name</string>
    <string name="prof_number">Phone Number</string>
    <string name="prof_pass">Password</string>
    <string name="prof_veh_type">Vechicle Type</string>
    <string name="prof_vech_number">Vechicle Number</string>
    <string name="change_pass">Change Password</string>
    <string name="save">Save</string>
    <string name="enter_new_name">Please enter your name to change.</string>
    <string name="new_name">New Name</string>
    <string name="err_name">Enter the name.</string>
    <string name="edit_phone">Edit Phone Number</string>
    <string name="edit_phone_msg">Please enter the new phone number, and you will receive a verification code to reset your number. </string>
    <string name="enter_old_pass">Please enter your current password. </string>
    <string name="old_pas">Enter Password</string>
    <string name="invalid_pass">Incorrect password</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="re_ent_pass">Re-Enter Password</string>
    <string name="submit">SUBMIT</string>
    <string name="ent_pres_pass">Enter the current password.</string>
    <string name="pass_change_success">Password changed successfully</string>
    <string name="enter_new_pass">Please enter new password</string>
    <string name="deli_completed">Delivery Completed</string>
    <string name="id_">"ID: "</string>
    <string name="help">Help?</string>
    <string name="bil_details">Bill Details</string>
    <string name="distance_fare">Distance </string>
    <string name="time_fare">Time </string>
    <string name="discount">Discount</string>
    <string name="sub_total">Sub Total</string>
    <string name="add_special">"+ Add Special Charges"</string>
    <string name="grand_total">Grand Total : </string>
    <string name="deliverd_to">Delivered to</string>
    <string name="reiever_name">Receiver Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="signature">Signature</string>
    <string name="photos_of_doc">Photos of document</string>
    <string name="take_photo">Take Photo</string>
    <string name="rate_the_cus">Rate the customer</string>
    <string name="read_storage_and_camera_state_permission_message">Please give permission for read write storage and camera to go ahead in app.</string>
    <string name="pickup">PICKUP</string>
    <string name="drop">DROP</string>
    <string name="lefttoaccept">Left to Accept</string>
    <string name="Deliveryfee">Delivery Fee</string>
    <string name="senderdetails">Sender Details</string>
    <string name="yourated">You Rated</string>
    <string name="total">Total</string>
    <string name="special_charge">Special Charges</string>
    <string name="bank_details">Bank Details</string>
    <string name="accno">Account Number*</string>
    <string name="rountinNo">Routing Number*</string>
    <string name="state">State*</string>
    <string name="city">City*</string>
    <string name="address">Address*</string>
    <string name="nameM">Name*</string>
    <string name="pincode">Pincode*</string>
    <string name="email_address">Email Address</string>
    <string name="or">OR</string>
    <string name="cards">Cards</string>
</resources>