<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history"
            android:title="@string/history" />

        <item
            android:id="@+id/nav_bank_details"
            android:icon="@drawable/menu_bank"
            android:title="@string/bank_details"
            android:visible="false"/>

        <item
            android:id="@+id/nav_cards"
            android:icon="@drawable/menu_payment_icon"
            android:title="@string/cards" />

        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/menu_payment_icon"
            android:title="@string/payments" />

        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/support"
            android:title="@string/support" />

        <item
            android:id="@+id/item_menu_nav_language"
            android:icon="@drawable/ic_language"
            android:title="@string/selectLanguage"
            android:visible="false"/>




        <!--  <item
              android:id="@+id/nav_live_chat"
              android:icon="@drawable/live_chat"
              android:title="@string/live_chat" />-->

       <!-- <item
            android:id="@+id/nav_portal"
            android:icon="@drawable/portal"
            android:title="@string/portal" />
-->

    </group>
</menu>