<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/activityRoot"
                android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <LinearLayout
        android:id="@+id/ll_top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llLogo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/dpFive"
                    android:src="@drawable/login_logo" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_splash_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/splash_msg"
                android:textColor="@color/color1"
                android:visibility="gone"
                android:textSize="@dimen/spThirteen" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dpSixteen"
            android:layout_marginStart="@dimen/dpSixteen"
            android:layout_marginRight="@dimen/dpSixteen"
            android:layout_marginEnd="@dimen/dpSixteen"
            android:layout_marginTop="20dp"
            >
            <LinearLayout
                android:id="@+id/llPhoneSelector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:padding="5dp"
                >
                <TextView
                    android:id="@+id/tv_option_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:textSize="@dimen/spEighteen"
                    android:textColor="@color/color_sup_txt"
                    />
                <View
                    android:id="@+id/view_phone_option"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:visibility="gone"
                    android:background="@color/colorPrimary"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llEmailSelector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:padding="5dp"
                >
                <TextView
                    android:id="@+id/tv_option_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_address"
                    android:textSize="@dimen/spEighteen"
                    android:textColor="@color/colorPrimary"
                    />
                <View
                    android:id="@+id/view_email_option"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:visibility="visible"
                    android:background="@color/colorPrimary"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/tvOr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/spFourteen"
                android:text="@string/or"
                android:gravity="center"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginEnd="2dp"
                android:layout_toLeftOf="@+id/llEmailSelector"
                android:layout_toRightOf="@+id/llPhoneSelector"
                android:textColor="@color/color_sup_txt"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dpTen"
            android:layout_marginLeft="@dimen/dpSixteen"
            android:layout_marginStart="@dimen/dpSixteen"
            android:layout_marginEnd="@dimen/dpSixteen"
            android:layout_marginRight="@dimen/dpSixteen"
            >

            <TextView
                android:id="@+id/tvUserNameHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_no"
                android:textColor="@color/colorAccent"
                android:textSize="11.5sp"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:visibility="gone"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/ll_phone_number"
                    android:visibility="gone"
                    >
                    <TextView
                        android:id="@+id/tvCountryCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/spFourteen"
                        android:text="+91"
                        android:textColor="@color/color_sup_txt"
                        android:padding="@dimen/dpTen"
                        />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/color_sup_txt"/>

                    <EditText
                        android:id="@+id/et_phone_num"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:background="@null"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:textSize="16sp" />

                </LinearLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_log_mail_mob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    >
                    <EditText
                        android:id="@+id/et_log_mail_mob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/email_address"
                        android:textSize="14sp" />

                </android.support.design.widget.TextInputLayout>

                <View
                    android:id="@+id/view_background"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/coments"
                    android:visibility="gone"
                    />

            </LinearLayout>



        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_log_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin">

            <EditText
                android:id="@+id/et_log_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tv_log_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dpForty"
            android:layout_marginRight="@dimen/dpForty"
            android:layout_marginTop="@dimen/dpTen"
            android:background="@drawable/sigin_back_green_click"
            android:gravity="center"
            android:paddingBottom="@dimen/dpTwenty"
            android:paddingTop="@dimen/dpTwenty"
            android:text="@string/signin"
            android:textColor="@color/white"
            android:textSize="@dimen/spSixteen" />

        <TextView
            android:id="@+id/tv_log_forgortpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/dpTen"
            android:text="@string/forgot_pass"
            android:textColor="@color/lig_green2"
            android:textSize="@dimen/spTen" />


        <TextView
            android:id="@+id/tv_selected_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dpTen"
            android:text="@string/english"
            android:textColor="@color/lig_green2"
            android:textSize="@dimen/spFourteen"
            android:gravity="center"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:textDirection="locale"
            android:visibility="gone"/>


    </LinearLayout>

    </ScrollView>


    <android.support.v7.widget.CardView
        android:id="@+id/cvBottom"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/tv_log_signup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/login_signup_txt" />

    </android.support.v7.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/silver_chalice"
        android:layout_above="@id/cvBottom"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />

</RelativeLayout>